--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+	<!-- inicio logo+barra nav -->
 	<nav class="navbar navbar-expand-md">
 		<div class="container-fluid">
 		  <a class="navbar-brand" href="../PreEntrega_VillalbaMarina/index.html">
@@ -50,34 +51,7 @@
 		  </div>
 		</div>
 	  </nav>
-
-	<!-- fila de logo+barra nav
-	<header class="header-container">
-		<div class="header-nav">
-			<img class="logoppal" src="../PreEntrega_VillalbaMarina/imagenes/LogoFinal_1_ConMail.jpg">
-		</div>
-		<div class="header-nav">
-			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/index.html">INICIO</a>
-			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/index.html"><img src="../PreEntrega_VillalbaMarina/imagenes/home.png"></a>
-		</div>
-		<div class="header-nav">
-			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/pages/tortas.html">TORTAS</a>
-			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/tortas.html"><img src="../PreEntrega_VillalbaMarina/imagenes/cake.png"></a>
-		</div>	
-		<div class="header-nav">
-			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html">CUPCAKES</a>
-			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/cupcakes.html"><img src="../PreEntrega_VillalbaMarina/imagenes/cupcake.png"></a>
-		</div>
-		<div class="header-nav">
-			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/pages/recetas.html">RECETAS</a>
-			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/recetas.html"><img src="../PreEntrega_VillalbaMarina/imagenes/recipe.png"></a>
-		</div>
-		<div class="header-nav">
-			<a class="nav-desktop" href="../PreEntrega_VillalbaMarina/pages/contacto.html">CONTACTO</a>
-			<a class="nav-mobile" href="../PreEntrega_VillalbaMarina/pages/contacto.html"><img src="../PreEntrega_VillalbaMarina/imagenes/email.png"></a>
-		</div>
-	</header>
-	cierre fila de logo+barra nav -->
+	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
 	<main>
