--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -21,26 +21,36 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-	<!-- fila de logo+barra nav -->
-	<header class="header-container">
-		<div class="header-nav">
+	<!-- inicio logo+barra nav -->
+	<nav class="navbar navbar-expand-md">
+		<div class="container-fluid">
+		<a class="navbar-brand" href="../index.html">
 			<img class="logoppal" src="../imagenes/LogoFinal_1_ConMail.jpg">
+		</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+			<li class="nav-item">
+				<a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../pages/tortas.html">TORTAS</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../pages/cupcakes.html">CUPCAKES</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../pages/recetas.html">RECETAS</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+			</li>
+			</ul>
 		</div>
-		<div class="header-nav">
-			<a href="../index.html">INICIO</a>
 		</div>
-		<div class="header-nav">
-			<a href="../pages/tortas.html">TORTAS</a>
-		</div>	
-		<div class="header-nav">
-			<a href="../pages/cupcakes.html">CUPCAKES</a>
-		</div>
-		<div class="header-nav">
-			<a href="../pages/recetas.html">RECETAS</a>
-		</div>
-		<div class="header-nav">
-			<a href="../pages/contacto.html">CONTACTO</a>
-	</header>
+	</nav>
 	<!-- cierre fila de logo+barra nav -->
 	<br>
 	<!-- titulos -->
