--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 		    Lorem, ipsum dolor sit amet, consectetur adipisicing elit. Minus laboriosam quae, doloribus repudiandae ducimus aspernatur quia similique maxime, rem, consequatur quaerat ad quas delectus harum, ratione corporis? Reprehenderit, eligendi, recusandae.</p>
 		</div>
 		<div class="images-desktop">
-			<img class="imgindex" src="../PreEntrega2_VillalbaMarina/imagenes/pasteleria1.jpg">
-			<img class="imgindex" src="../PreEntrega2_VillalbaMarina/imagenes/pasteleria2.jpg">
-			<img class="imgindex" src="../PreEntrega2_VillalbaMarina/imagenes/pasteleria3.jpg">
+			<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" alt="cupcakes coloridos">
+			<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg" alt="elementos y utensillos de cocina">
+			<img class="imgindex" src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg" alt="porcion de torta de chocolate y porcion de torta red velvet">
 		</div>
 		<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
 			<div class="carousel-indicators">
@@ -81,7 +81,7 @@
 				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria3.jpg" class="d-block w-100" alt="porcion de torta de chocolate y porcion de torta red velvet">
 			  </div>
 			  <div class="carousel-item">
-				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" alt="cupcakes coloridos" class="d-block w-100">
+				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria1.jpg" class="d-block w-100" alt="cupcakes coloridos">
 			  </div>
 			  <div class="carousel-item">
 				<img src="../PreEntrega_VillalbaMarina/imagenes/pasteleria2.jpg" class="d-block w-100" alt="elementos y utensillos de cocina">
