--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -78,7 +78,7 @@
 			    <iframe class="links_recetas" src="https://www.youtube.com/embed/BH6ZJatNhVs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		    </div>
 		    <div class="videos">
-			    <iframe class="links_recetas" src="https://www.youtube.com/embed/Jm0sgO6xupQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			    <iframe class="links_recetas" src="https://www.youtube.com/embed/Jm0sgO6xupQ" title="YouTube video player" style="width: 65%" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		    </div>
 	    </div>
 	</main>
