--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,7 +67,30 @@
 	    <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d13102.769919407783!2d-58.16024352596436!3d-34.81367788307954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x95a327c47ad171c5%3A0x80fb17558854c3bd!2sC.%2074%2C%20Guillermo%20Hudson%2C%20Provincia%20de%20Buenos%20Aires!3m2!1d-34.8104382!2d-58.174587599999995!5e0!3m2!1ses!2sar!4v1667413151651!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	    <br>
 	    <br>
-	    <form class="contact_form">
+	    
+		<div class="mb-3">
+			<label for="Name" class="form-label">Nombre</label>
+			<input type="text" class="form-control" id="formGroupExampleInput">
+		</div>
+		<div class="mb-3">
+			<label for="Email" class="form-label">Email</label>
+			<input type="email" class="form-control" id="formGroupExampleInput2">
+		</div>
+		<div class="mb-3">
+			<label for="Phone" class="form-label">Telefono</label>
+			<input type="email" class="form-control" id="formGroupExampleInput3">
+		</div>
+		<div class="mb-3">
+			<label for="Text" class="form-label">Motivo de la consulta</label>
+			<input type="text" class="form-control" id="formGroupExampleInput4">
+		</div>
+		<div class="mb-3">
+			<label for="text" class="form-label">Detalle</label>
+			<textarea for="text" class="formulario2" type="text"></textarea>
+		</div>
+		
+		
+	<!-- <form class="contact_form">
 		    <label for="name" class="detalle-form">Nombre</label>
 		    <input class="formulario" type="text">
 		    <label for="email" class="detalle-form">Email</label>
@@ -82,7 +105,7 @@
 				<input class="formulario3" type="submit">
 				<input class="formulario3" type="reset" value="Limpiar formulario">
 			</div>
-		</form>
+		</form> -->
 	</main>
 	<!-- cierre de formulario de contacto -->
 	<br>
